# netcdf-c

./: CMakeLists.txt  RELEASE_NOTES.md  cf  cf.cmake  config.h.in  configure.ac
dap4_test/: CMakeLists.txt  Makefile.am  findtestserver.c  maketests.sh  t_dmr.h  t_dmrdata.sh  t_dmrmeta.c  t_dmrmeta.sh  t_dmrparse.c  t_dmrparse.sh  test_common.h  test_common.sh  test_data.sh  test_hyrax.sh  test_meta.sh  test_ncuri.c  test_parse.sh  test_raw.sh  test_remote.sh
dap4_test/baseline/: test_anon_dim.2.syn.d4p  test_atomic_array.5.nc.d4p  test_atomic_array.5.nc.dap.ncdump  test_atomic_array.8.nc.dap.ncdump  test_atomic_array.8.nc.dmr.ncdump  test_atomic_array.9.nc.d4p  test_atomic_array.9.nc.dap.ncdump  test_atomic_array.9.nc.dmr.ncdump  test_atomic_array.nc.dap.ncdump  test_atomic_array.nc.dmr.ncdump  test_atomic_array.syn.d4p  test_atomic_array.syn.dap.ncdump  test_atomic_array.syn.dmr.ncdump  test_atomic_types.nc.dap.ncdump  test_atomic_types.nc.dmr.ncdump  test_atomic_types.syn.d4p  test_atomic_types.syn.dap.ncdump  test_atomic_types.syn.dmr.ncdump  test_enum.nc.dap.ncdump  test_enum_2.nc.dap.ncdump  test_enum_array.4.nc.d4p  test_enum_array.4.nc.dap.ncdump  test_enum_array.nc.dap.ncdump  test_fill.nc.dap.ncdump  test_one_var.nc.dap.ncdump  test_one_vararray.1.nc.d4p  test_one_vararray.3.nc.d4p  test_one_vararray.3.nc.dap.ncdump  test_one_vararray.3.nc.dmr.ncdump  test_opaque.nc.dap.ncdump  test_opaque_array.7.nc.d4p  test_opaque_array.7.nc.dap.ncdump  test_opaque_array.nc.dap.ncdump  test_sequence_1.syn.dap.ncdump  test_sequence_1.syn.dmr.ncdump  test_sequence_2.syn.dap.ncdump  test_sequence_2.syn.dmr.ncdump  test_struct1.nc.dap.ncdump  test_struct_array.6.nc.d4p  test_struct_array.6.nc.dap.ncdump  (+17 more)
dap4_test/baselineraw/: test_atomic_array.5.nc.dmp  test_atomic_array.8.nc.dmp  test_atomic_array.9.nc.dmp  test_atomic_array.nc.dmp  (+24 more)
libdap4/: Make0  (+19 more)
(+128 files in other folders)
